force-app/main/default/objects/Case/fields/Case_Score__c.field-meta.xml
<CustomField>
    <fullName>Case_Score__c</fullName>
    <label>Case Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>