force-app/main/default/objects/Case/listViews/Support_Tier_1_Case.listView-meta.xml
<ListView>
    <fullName>Support_Tier_1_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Support – Tier 1</label>
    <queue>Support_Tier_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>